--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -237,8 +237,9 @@ unsetopt sharehistory
 
 # ----------- EXPORTS -------------
 
-export BUCKAROO_TELEMETRY_OPT_OUT=1
 export EDITOR='vim'
+
+export PATH="/home/scybernaut/.yarn/bin:$PATH"
 
 # ----- ENVIRONMENT VARIABLES -----
 
