--- a/dot_zlogin.tmpl
+++ b/dot_zlogin.tmpl
@@ -1,2 +1,3 @@
-echo
+$(find ~/.colorscripts/login -type f | shuf -n 1)
+
 echo '  \033[1;38;5;2mWelcome back to \033[1;38;5;13m{{ .chezmoi.osRelease.prettyName }}\033[1;38;5;2m, \033[38;5;11m'$USER'\033[38;5;2m!\033[0m'
