--- a/dot_zlogin.tmpl
+++ b/dot_zlogin.tmpl
@@ -1,2 +1,4 @@
+export GRIM_DEFAULT_DIR=~/Pictures/Screenshots
+
 echo
 echo '  \033[1;38;5;2mWelcome back to \033[1;38;5;13m{{ .chezmoi.osRelease.prettyName }}\033[1;38;5;2m, \033[38;5;11m'$USER'\033[38;5;2m!\033[0m'
