--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,12 +1,11 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
+    font-family: "JetBrains Mono", FontAwesome, sans-serif;
+    font-size: 14px;
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+    background-color: rgba(40, 42, 54, 0.75);
     color: #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
@@ -34,35 +33,48 @@ window#waybar.chromium {
     border: none;
 }
 
+box.horizontal {
+    margin: 2px 4px;
+}
+
 #workspaces button {
-    padding: 0 5px;
-    background-color: transparent;
+    padding: 0 0px;
+    background-color: #6272a4;
     color: #ffffff;
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
     /* Avoid rounded borders under each workspace name */
     border: none;
     border-radius: 0;
+    margin: 0;
+
+    transition-property: background-color, color;
+    transition-duration: 200ms;
+}
+
+#workspaces button:first-child {
+    border-radius: 9999px 0 0 9999px;
+}
+
+#workspaces button:last-child {
+    border-radius: 0 9999px 9999px 0;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+    background-color: #8be9fd;
+    color: #6272a4;
 }
 
 #workspaces button.urgent {
-    background-color: #eb4d4b;
+    background-color: #ffb86c;
 }
 
 #mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
+    background-color: #f1fa8c;
+    color: #282a36;
+    border-radius: 9999px;
 }
 
 #clock,
@@ -78,9 +90,11 @@ window#waybar.chromium {
 #tray,
 #mode,
 #idle_inhibitor,
-#mpd {
+#mpd,
+#language,
+#custom-spotify{
     padding: 0 10px;
-    color: #ffffff;
+    border-radius: 9999px;
 }
 
 #window,
@@ -98,8 +112,8 @@ window#waybar.chromium {
     margin-right: 0;
 }
 
-#clock {
-    background-color: #64727D;
+#clock:only-child {
+    font-weight: bold;
 }
 
 #battery {
@@ -134,12 +148,13 @@ label:focus {
 }
 
 #cpu {
-    background-color: #2ecc71;
-    color: #000000;
+    background-color: #44475a;
+    color: #f1fa8c;
 }
 
 #memory {
-    background-color: #9b59b6;
+    background-color: #44475a;
+    color: #ff79c6;
 }
 
 #disk {
@@ -151,16 +166,18 @@ label:focus {
 }
 
 #network {
-    background-color: #2980b9;
+    color: #f1fa8c;
+    background-color: #44475a;
 }
 
 #network.disconnected {
-    background-color: #f53c3c;
+    background-color: #ff5555;
+    color: #f8f8f2;
 }
 
 #pulseaudio {
-    background-color: #f1c40f;
-    color: #000000;
+    background-color: #44475a;
+    color: #ffb86c;
 }
 
 #pulseaudio.muted {
@@ -182,6 +199,11 @@ label:focus {
     background-color: #ffa000;
 }
 
+#custom-spotify {
+    background-color: #44475a;
+    color: #50fa7b;
+}
+
 #temperature {
     background-color: #f0932b;
 }
@@ -191,7 +213,8 @@ label:focus {
 }
 
 #tray {
-    background-color: #2980b9;
+    background-color: #6272a4;
+    margin: 0;
 }
 
 #tray > .passive {
@@ -204,12 +227,12 @@ label:focus {
 }
 
 #idle_inhibitor {
-    background-color: #2d3436;
+    background-color: #44475a;
 }
 
 #idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
+    background-color: #f8f8f2;
+    color: #282a36;
 }
 
 #mpd {
@@ -230,11 +253,8 @@ label:focus {
 }
 
 #language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
+    background-color: #44475a;
+    color: #8be9fd;
 }
 
 #keyboard-state {
